--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,7 @@
     --blue: #89b5ef;
     --grey: #777777;
     --purple: #bcb3dd;
-    --green:  rgb(83, 255, 195);
+    --green:  rgb(120, 255, 83);
 }
 *{
     font-family: 'Roboto', sans-serif;
@@ -33,8 +33,8 @@ form{
 }
 #button{
     margin: 10px;
-    border-radius: 7%;
-    color: rgb(65, 65, 65);
+    border-radius: 1rem;
+    color: var(--grey);
     height: fit-content;
 }
 #button:hover{
