--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -6,16 +6,20 @@
     width: 30rem;
     min-height: 25rem;
     height: fit-content;
-    /* border: 10px solid rgb(255, 187, 97);
-    border-radius: 11%; */
 }
 .user-information > label{
     display: flex;
     justify-content: center;
-    width: 100%;
+    width: 70%;
 }
 .user-information > label > input{
     width: 90%;
+}
+#sign-me-up{
+    margin: 2rem;
+    border-radius: 1rem;
+    padding: .77rem;
+    width: 30%;
 }
 #login{
     border-radius: 7%;
