--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -19,7 +19,49 @@
         width: 1000px;
         display: flex;
         align-items: center;
+    }
+    .spot-details-images-hero{
+        width: 50%;
     }   
+}
+@media screen and (max-width: 1040px){
+    .spot-details > *{
+        width: 1000px;
+        display: flex;
+        flex-direction: column;
+    }
+    .spot-details-images{
+        display: flex;
+        flex-direction: column;
+    }
+    .spot-details-header{
+        width: 1000px;
+        display: flex;
+        align-items: center;
+    }
+    .spot-details-images-hero{
+        width: 50%;
+    }
+    .spot-details-section{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    .spot-details-info{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .spot-details-info-reserve > *{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .spot-details-info-section-one{
+        width: 50%;
+    }     
 }
 .spot-details-header{
     width: 100%;
@@ -46,7 +88,6 @@
 .spot-details-images-hero{
     display: flex;
     align-items: center;justify-content: center;
-    width: 70%;
 }
 .spot-details-images-support{
     display: grid;
