--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -1,15 +1,17 @@
 .spot-details{
-    width: 1000px;
+    max-width: 1000px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 @media screen and (max-width: 1250px){
-    .spot-details > *{
-        width: 1000px;
+    .spot-details{
+        max-width: 1000px;
         display: flex;
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
     .spot-details-images{
         display: flex;
@@ -23,45 +25,28 @@
     .spot-details-images-hero{
         width: 50%;
     }   
-}
-@media screen and (max-width: 1040px){
-    .spot-details > *{
-        width: 1000px;
+    .spot-details-reviews{
         display: flex;
         flex-direction: column;
-    }
-    .spot-details-images{
-        display: flex;
-        flex-direction: column;
-    }
-    .spot-details-header{
-        width: 1000px;
-        display: flex;
         align-items: center;
+        justify-content: center;
     }
-    .spot-details-images-hero{
-        width: 50%;
+    .post-review{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
     .spot-details-section{
         display: flex;
         flex-direction: column;
-        flex-wrap: wrap;
     }
     .spot-details-info{
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
     }
-    .spot-details-info-reserve > *{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-    .spot-details-info-section-one{
-        width: 50%;
-    }     
+}
+@media screen and (max-width: 768px){
 }
 .spot-details-header{
     width: 100%;
@@ -190,9 +175,3 @@
     justify-content: right;
     align-content: center;
 }
-/* .spot-details-images-support{
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: repeat(2,1fr);
-    width: 90%;
-} */
