probly done for the night, ngl that css took me waaaaaaaaaaaaaaaaaaaaaaaay too loong

--- a/frontend/src/components/SpotCardImage/SpotCardImage.css
+++ b/frontend/src/components/SpotCardImage/SpotCardImage.css
@@ -12,8 +12,8 @@ img{
     height: 100%;
     object-fit: cover;
 }
-@media screen and (max-width: 330px){
-    img{
-        width: 70%;
+@media screen and (max-width: 720px){
+    .image-container{
+        width: 11rem;
     }
 }
