--- a/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
+++ b/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
@@ -5,10 +5,9 @@
   width: 100%;
   height: 100%;
 }
-.form-row-data-city-state{
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.text-area{
+  border: 3px solid rgb(0, 0, 0);
+  border-radius: 0.2em;
 }
 .user-information-create-spot{
   display: flex;
@@ -27,9 +26,12 @@ h2{
   font-weight: 450;
 }
 .form-section{
-  width: 100%;
+  border: 1px solid var(--grey);
+  border-radius: 2em;
+  width: 45%;
   margin-bottom: 0.5em;
   margin-top: 0.5em;
+  padding: 1rem;
 }
 .form-row{
   width: 100%;
@@ -45,7 +47,7 @@ h2{
   justify-content: center;
 }
 .form-row-data{
-  width: 50%;
+  width: 75%;
 }
 .form-row-data-label{
   display: flex;
@@ -67,4 +69,10 @@ h2{
 #login:hover{
  box-shadow: 1px 1px 1px rgb(202, 231, 202);
  filter: brightness(150%)
+}
+.create-button{
+  border: 1px solid var(--grey);
+  border-radius: 0.2em;
+  width: 15%;
+  padding: .5rem;
 }
