--- a/frontend/src/components/SpotCards/SpotCards.css
+++ b/frontend/src/components/SpotCards/SpotCards.css
@@ -14,7 +14,7 @@
     display: grid;
     grid-template-columns: repeat(4,1fr);
     row-gap: 3rem;
-    column-gap: 2rem;
+    column-gap: 3rem;
     align-items: center;
     justify-content: center;
 }
@@ -26,11 +26,11 @@
     align-items: center;
 }
 .spot-card:hover .tooltip-text{
-    background: radial-gradient(#d68c8c, #c7ccff);
-    filter:brightness(150%);
-    color: rgb(36, 0, 79);
+    filter:brightness(110%);
+    background-color: var(--grey);
+    color: var(--red);
     font-weight: bold;
-    font-size: 1.1rem;
+    font-size: .9rem;
     visibility: visible;
 }
 .nav-link:hover{
