--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -2,6 +2,9 @@
     background-color: white;
     border: none;
 }
+.nav-item{
+    width: 3rem;
+}
 .profile-menu > *{
     color: var(--grey);
 }
@@ -14,12 +17,41 @@
     align-items: center;
     font-family: 'Roboto', sans-serif;
     width: 100%;
-    padding-bottom: 1rem;
+    margin:0;
+    padding: 0;
+}
+.conditional-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 }
 .nav-bar-conditional-content{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    padding: 1rem;
+    border: 1px solid var(--green);
+    border-radius: 1rem;
+    margin: 1rem;
+    width: 11rem;
+}
+.profile-dropdown{
+    padding: 0;
+}
+.nav-item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+/* .nav-bar-conditional-content:hover{
+    font-weight: bold;
+    filter: saturate(4);
+} */
+.conditional-content > li{
+    padding:1rem;
+    margin: 1rem;
 }
 ul > *{
     list-style: none;
@@ -58,7 +90,6 @@ i{
     align-items: center;
     justify-content: center;
     border-radius: 1rem;
-    padding: .37rem;
 }
 #logo:hover{
     font-weight: bold;
@@ -68,7 +99,7 @@ i{
     height: 1rem;
     width: 1rem;
     padding-right: 1rem;
-    margin-left: 1rem;
+    margin-right: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -84,7 +115,10 @@ i{
     align-items: center;
     justify-content: center;
 }
-.profile-dropdown > *{
+.fa-user-circle:hover{
+    cursor: pointer;
+}
+.conditional-content> *{
     border-bottom: 1px solid var(--red);
     margin-right: 2rem;
 }
