--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,3 +34,19 @@ form{
 .errors{
     color: var(--red)
 }
+#button{
+    border-radius: 7%;
+    border: 1px solid var(--grey);
+    background-color: white;
+    color: var(--red);
+    font-size: 1rem;
+    height: fit-content;
+    border-radius: 1rem;
+    padding: .77rem;
+    margin: 1rem;
+    width: 70%;
+}
+#button:hover{
+    box-shadow: 1px 1px 1px var(--grey);
+    background-color: rgba(255, 56, 93, 0.027);
+}
