--- a/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
+++ b/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
@@ -4,6 +4,11 @@
   align-items: left;
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  overflow-y: scroll;
+  max-height: 100vh;
 }
 .text-area{
   border: 3px solid rgb(0, 0, 0);
