--- a/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
+++ b/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
@@ -18,11 +18,13 @@
   display: flex;
   flex-direction: column;
   justify-content:space-evenly;
-  align-items: center;
+  /* align-items: center; */
 }
 label > input{
   border: 3px solid rgb(0, 0, 0);
   border-radius: 0.2em;
+  width: 100%;
+  height: 100%;
 }
 h1{
   font-weight: 550;
@@ -33,7 +35,7 @@ h2{
 .form-section{
   border: 1px solid var(--grey);
   border-radius: 2em;
-  width: 45%;
+  /* width: 45%; */
   margin-bottom: 0.5em;
   margin-top: 0.5em;
   padding: 1rem;
@@ -46,14 +48,19 @@ h2{
   margin-bottom: 0.5em;
   margin-top: 0.5em;
 }
+.form-row > *{
+  display: flex;
+  flex-direction: column;
+  width: 75%;
+}
 .city-state{
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.form-row-data{
+/* .form-row-data{
   width: 75%;
-}
+} */
 .form-row-data-label{
   display: flex;
   justify-content: space-between;
