--- a/frontend/src/components/SpotCards/SpotCards.css
+++ b/frontend/src/components/SpotCards/SpotCards.css
@@ -13,7 +13,6 @@
 .spot-cards-section{
     display: grid;
     grid-template-columns: repeat(4,1fr);
-    margin: 1rem;
     row-gap: 3rem;
     column-gap: 3rem;
     align-items: center;
@@ -43,16 +42,14 @@
     filter:brightness(110%);
 }
 .nav-link{
-    height: 100%;
-    width: 100%;
+    height: 105%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 1rem;
-    border: 0.1px solid rgba(0, 0, 0, 0.151);
+    border: 0.1rem solid rgba(0, 0, 0, 0.151);
     box-shadow: 0 .2rem .2rem rgba(0, 0, 0, 0.432);
-    margin: 1rem;
 }
 .nav-link-info{
     width: 90%;
