--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,7 @@
     --blue: #002B5B;
     --grey: #E4DCCF;
     --purple: #bcb3dd91;
-    --green:  #E4DCCF;
+    --green:  #F9F5EB;
 }
 *{
     font-family: 'Roboto', sans-serif;
