--- a/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
+++ b/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
@@ -24,7 +24,9 @@ label > input{
   border: 3px solid rgb(0, 0, 0);
   border-radius: 0.2em;
   width: 100%;
-  height: 100%;
+  height: 1rem;
+  font-size: 1rem;
+  padding: 0.5rem;
 }
 h1{
   font-weight: 550;
@@ -39,6 +41,7 @@ h2{
   margin-bottom: 0.5em;
   margin-top: 0.5em;
   padding: 1rem;
+  box-shadow: 0 .4rem .4rem var(--grey);
 }
 .form-row{
   width: 100%;
