--- a/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
+++ b/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
@@ -20,20 +20,6 @@
   justify-content:space-evenly;
   /* align-items: center; */
 }
-label > input{
-  border: 3px solid rgb(0, 0, 0);
-  border-radius: 0.2em;
-  width: 100%;
-  height: 1rem;
-  font-size: 1rem;
-  padding: 0.5rem;
-}
-h1{
-  font-weight: 550;
-}
-h2{
-  font-weight: 450;
-}
 .form-section{
   border: 1px solid var(--grey);
   border-radius: 2em;
@@ -41,7 +27,7 @@ h2{
   margin-bottom: 0.5em;
   margin-top: 0.5em;
   padding: 1rem;
-  box-shadow: 0 .4rem .4rem var(--grey);
+  box-shadow: -0.1rem -.1rem .1rem var(--green),-0.2rem -.2rem .1rem var(--red),-0.3rem -.3rem .3rem var(--grey),0.1rem .1rem .1rem var(--grey),0.1rem .1rem .2rem var(--green),0.1rem .1rem .1rem var(--red);
 }
 .form-row{
   width: 100%;
