--- a/frontend/src/components/ManageButtons/ManageButtons.css
+++ b/frontend/src/components/ManageButtons/ManageButtons.css
@@ -1,6 +1,14 @@
-.manage-buttons{
- border: 1px solid yellow;
- display: flex;
- justify-content:flex-start;
- width: 100%;
+#manage{
+ border: none;
+ padding: .5rem; 
+ margin: .5rem;
+ border-radius: 1rem;
+ background: var(--grey);
+ color: var(--red);
+ font-weight: bolder;
+ height: fit-content;
+ box-shadow: .21rem .21rem  .1rem var(--blue);
+}
+#manage:hover{
+ filter: saturate(2);
 }
