--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,7 @@
     --grey: #E4DCCF;
     --purple: #bcb3dd91;
     --green:  #F9F5EB;
+    --black: #EA9E54;
 }
 *{
     font-family: 'Roboto', sans-serif;
@@ -22,6 +23,24 @@
     border-radius: 23%;
     font-weight: 10;
     color: rgba(0, 0, 0, 0.733);
+}
+label > input{
+    border: 3px solid rgb(0, 0, 0);
+    border-radius: 0.2em;
+    width: 100%;
+    height: 1rem;
+    font-size: 1rem;
+    padding: 0.5rem;
+  }
+h1{
+    font-weight: 550;
+    padding: .7rem;
+    color: var(--blue);
+    box-shadow: -0.4rem -.4rem .1rem var(--green),-0.4rem -.4rem .1rem var(--red),-0.4rem -.4rem .1rem var(--blue),-.42rem -.42rem .12rem var(--blue), 0.4rem .4rem .1rem var(--green),0.4rem .4rem .1rem var(--red),0.4rem .4rem .1rem var(--blue),0.41rem .41rem .5rem var(--blue);
+}
+h2{
+    font-weight: 450;
+    color: var(--blue)
 }
 form{
     display: flex;
