modals and forms css

--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -35,9 +35,13 @@
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.7);
 }
-
-#modal-content {
+#modal-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  font-weight: 10;
+  color: rgba(0, 0, 0, 0.733);
   position: absolute;
   background-color:rgb(255, 255, 255);
-  border: .5rem solid var(--red)
 }
