--- a/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
+++ b/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
@@ -10,6 +10,11 @@
   overflow-y: scroll;
   max-height: 100vh;
 }
+#top{
+  margin-top: 2rem;
+  margin-left: 2rem;
+  margin-right: 2rem
+}
 .text-area{
   border: 3px solid rgb(0, 0, 0);
   border-radius: 0.2em;
@@ -17,17 +22,20 @@
 .user-information-create-spot{
   display: flex;
   flex-direction: column;
-  justify-content:space-evenly;
-  /* align-items: center; */
+  align-items: center;
+  justify-content: center;
 }
 .form-section{
   border: 1px solid var(--grey);
   border-radius: 2em;
-  /* width: 45%; */
+  width: 77%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   margin-bottom: 0.5em;
   margin-top: 0.5em;
-  padding: 1rem;
-  box-shadow: -0.1rem -.1rem .1rem var(--green),-0.2rem -.2rem .1rem var(--red),-0.3rem -.3rem .3rem var(--grey),0.1rem .1rem .1rem var(--grey),0.1rem .1rem .2rem var(--green),0.1rem .1rem .1rem var(--red);
+  box-shadow: -0.1rem -.1rem .1rem var(--green),-0.2rem -.2rem .1rem var(--red),-0.3rem -.3rem .3rem var(--grey),0.1rem .1rem .1rem var(--grey),0.1rem .1rem .2rem var(--green),0.1rem .1rem .1rem var(--red),.23rem .23rem .1rem var(--blue);
 }
 .form-row{
   width: 100%;
@@ -46,6 +54,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 1rem;
 }
 /* .form-row-data{
   width: 75%;
