--- a/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
+++ b/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
@@ -62,6 +62,9 @@
 .form-row-data-label{
   display: flex;
   justify-content: space-between;
+  padding: 0.5rem 0 0.2rem 0.5rem;
+  font-weight: bolder;
+  color:var(--blue)
 }
 .form-row-data > *{
   display: flex;
