--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,7 @@
     --red: #EA5455;
     --blue: #002B5B;
     --grey: #E4DCCF;
+    --beige: #fff5e453;
     --purple: #bcb3dd91;
     --green:  #F9F5EB;
     --black: #EA9E54;
@@ -21,12 +22,41 @@ label > input{
     width: 100%;
     height: 1rem;
     font-size: 1rem;
-    padding: 0.5rem;
-  }
+    padding: 0.5rem 0 0.5rem 0.5rem;
+}
 h1{
     font-weight: 550;
     color: var(--blue);
-    box-shadow: -0.4rem -.4rem .1rem var(--green),-0.4rem -.4rem .1rem var(--red),-0.4rem -.4rem .1rem var(--blue),-.42rem -.42rem .12rem var(--blue), 0.4rem .4rem .1rem var(--green),0.4rem .4rem .1rem var(--red),0.4rem .4rem .1rem var(--blue),0.41rem .41rem .5rem var(--blue);
+    box-shadow: 
+    -0.1rem -.1rem .1rem var(--black),
+    -0.4rem -.4rem .1rem var(--green),
+    -0.5rem -.5rem .1rem var(--red),
+    -0.4rem -.4rem .1rem var(--blue),
+    -.42rem -.42rem .12rem var(--blue),
+    0.1rem .1rem .1rem var(--blue),
+     0.4rem .4rem .1rem var(--green),
+     0.4rem .4rem .1rem var(--red),
+     0.4rem .4rem .1rem var(--blue),
+     .5rem .5rem .5rem .1rem var(--grey);
+     /* 0.41rem .41rem .5rem var(--blue),
+     .42rem .42rem .42rem .5rem var(--grey); */
+    background-color: var(--beige);
+    padding:.5rem;
+}
+#subtitle{
+    font-weight: 550;
+    color: var(--blue);
+    box-shadow: 
+    -0.1rem -.1rem .1rem var(--black),
+    -0.12rem -.12rem .11rem var(--green),
+    -0.13rem -.13rem .12rem var(--red),
+    -.14rem -.14rem .13rem var(--blue),
+    -.18rem -.18rem .18rem var(--grey),
+    0.1rem .1rem .1rem var(--blue),
+    .2rem .2rem .2rem .1rem var(--grey),
+    .23rem .23rem .23rem .1rem var(--red);
+    background-color: var(--beige);
+    padding:.2rem;
 }
 h2{
     font-weight: 450;
