--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,7 @@
     --blue: #002B5B;
     --grey: #E4DCCF;
     --beige: #fff5e453;
+    --grey-too: #0044ff05;
     --purple: #bcb3dd91;
     --green:  #F9F5EB;
     --black: #EA9E54;
