--- a/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
+++ b/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
@@ -36,6 +36,7 @@
   margin-bottom: 0.5em;
   margin-top: 0.5em;
   box-shadow: -0.1rem -.1rem .1rem var(--green),-0.2rem -.2rem .1rem var(--red),-0.3rem -.3rem .3rem var(--grey),0.1rem .1rem .1rem var(--grey),0.1rem .1rem .2rem var(--green),0.1rem .1rem .1rem var(--red),.23rem .23rem .1rem var(--blue);
+  background-color: var(--grey-too);
 }
 .form-row{
   width: 100%;
