--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -58,9 +58,9 @@
     border-radius: 1rem;
 }
 .spot-details-header > *{
-    padding-left: 20px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    /* padding-left: 1rem; */
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 .spot-details-images{
     display: flex;
