--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,6 +11,10 @@
 *{
     font-family: 'Roboto', sans-serif;
 }
+body{
+    margin: 0;
+    padding: 0;
+}
 #root{
     display: flex;
     flex-direction: column;
