--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -2,8 +2,12 @@
     background-color: white;
     border: none;
 }
-.nav-item{
-
+#profile-bruh{
+    display: flex;
+    align-items: center;
+}
+.profile-dropdown{
+    border: 1px solid red;
 }
 .profile-menu > *{
     color: var(--grey);
@@ -24,31 +28,26 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 25%;
     border: .3rem solid var(--green);
     border-radius: 1rem;
     margin: 1rem;
     margin-bottom: 5rem;
-    transition: transform .23s;
+    /* transition: transform .23s; */
 }
 .nav-bar-conditional-content:hover{
-    transform: translateY(-.23rem);
+    /* transform: scale(1.3); */
     border: .35rem solid var(--green);
     filter: saturate(3);
 }
-.nav-bar-conditional-content:hover .fa-user-circle{
-    transform: scale(1.1);
-}
 .nav-bar-conditional-content > *{
     padding: 1rem;
-    width: 100%;
 }
 .conditional-content{
-    position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
+    border: 1px solid red;
 }
 .conditional-content > *{
     box-shadow: -0.1rem -.1rem .1rem var(--green),-0.11rem -.11rem .1rem var(--red),-0.3rem -.3rem .3rem var(--grey),0.1rem .1rem .1rem var(--grey),0.1rem .1rem .2rem var(--green),0.1rem .1rem .1rem var(--red),.23rem .23rem .1rem var(--blue);
@@ -68,7 +67,6 @@
 }
 #profile {
     margin: 0;
-    width: 100%;
 }
 .nav-item {
     display: flex;
@@ -138,18 +136,19 @@ i {
     filter: saturate(2);
 }
 .fa-user-circle{
-    height: 1rem;
-    width: 1rem;
+    height: 10px;
+    width: 10px;
     margin-right: 1rem;
     margin-left: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: transform .23s;
+        transition: transform .23s;
 }
 .fa-user-circle:hover{
     cursor: pointer;
-    filter: saturate(2);
+    /* filter: saturate(2); */
+    transform: scale(1.5);
 }
 #new-spot > a{
     transition: transform .23s;
