--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,3 +1,9 @@
+#profile{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
 .profile-menu{
     background-color: white;
     border: none;
@@ -15,6 +21,7 @@
 .hidden{
     display: none;
 }
+
 .nav-bar{
     display: flex;
     justify-content: space-between;
