--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,3 +1,7 @@
+.logo{
+    font-size: 2rem;
+    font-weight: bolder;
+}
 #profile{
     display: flex;
     flex-direction: column;
@@ -5,7 +9,6 @@
     align-items: center;
 }
 .profile-menu{
-    background-color: white;
     border: none;
 }
 #profile-bruh{
@@ -21,7 +24,6 @@
 .hidden{
     display: none;
 }
-
 .nav-bar{
     display: flex;
     justify-content: space-between;
@@ -30,44 +32,39 @@
     padding: 0;
     margin: 0;
 }
-.mobile-nav{
-    display: none;
-}
 .nav-bar-conditional-content{
     display: flex;
     justify-content: center;
     align-items: center;
-    border: .3rem solid var(--green);
     border-radius: 1rem;
     margin: 1rem;
-    margin-bottom: 5rem;
-    /* transition: transform .23s; */
+    margin-bottom: 1rem;
+    transition: transform .23s;
 }
 .nav-bar-conditional-content:hover{
-    /* transform: scale(1.3); */
-    border: .35rem solid var(--green);
+    transform: scale(1.1);
+    /* border: .35rem solid var(--green); */
     filter: saturate(3);
+}
+.nav-bar-conditional-content:hover > a{
+    box-shadow: -0.1rem -.1rem .1rem var(--green),-0.11rem -.11rem .1rem var(--red),-0.3rem -.3rem .3rem var(--grey),0.1rem .1rem .1rem var(--grey),0.1rem .1rem .2rem var(--green),0.1rem .1rem .1rem var(--red),.23rem .23rem .1rem var(--blue);
 }
 .nav-bar-conditional-content > *{
     padding: 1rem;
 }
-.conditional-content{
+.nav-bar-conditional-content{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    border: 1px solid red;
+    width: 25%;
 }
-.conditional-content > *{
-    box-shadow: -0.1rem -.1rem .1rem var(--green),-0.11rem -.11rem .1rem var(--red),-0.3rem -.3rem .3rem var(--grey),0.1rem .1rem .1rem var(--grey),0.1rem .1rem .2rem var(--green),0.1rem .1rem .1rem var(--red),.23rem .23rem .1rem var(--blue);
-    background-color: var(--grey-too);
+.nav-bar-conditional-content > *{
     border-radius: 1rem;
     margin: 1rem;
     padding: 1.3rem .7rem;
     transition: transform .23s ease-in-out;
 }
-.conditional-content > *:hover{
-    background-color: var(--green);
+.nav-bar-conditional-content > *:hover{
     filter: saturate(1.1);
     transform: scale(1.001);
 }
@@ -133,8 +130,7 @@ i {
 .fa-yin-yang{
     height: 1rem;
     width: 1rem;
-    padding-right: 1rem;
-    margin-right: 1rem;
+    margin: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -144,15 +140,11 @@ i {
 .fa-yin-yang:hover{
     filter: saturate(2);
 }
-.fa-user-circle{
-    height: 10px;
-    width: 10px;
-    margin-right: 1rem;
-    margin-left: 1rem;
+.fas.fa-user-circle{
     display: flex;
     align-items: center;
     justify-content: center;
-        transition: transform .23s;
+    transition: transform .23s;
 }
 .fa-user-circle:hover{
     cursor: pointer;
@@ -195,24 +187,6 @@ i {
     }
     .nav-bar{
         display: none;
-    }
-    .mobile-nav{
-        display: flex;
-    }
-    .mobile-menu{
-        border: .11rem solid var(--blue);
-        box-shadow: -0.1rem -.1rem .1rem var(--green),-0.11rem -.11rem .1rem var(--red),-0.3rem -.3rem .3rem var(--grey),0.1rem .1rem .1rem var(--grey),0.1rem .1rem .2rem var(--green),0.1rem .1rem .1rem var(--red),.23rem .23rem .1rem var(--blue);
-        border-radius: 9%;
-        margin: 1rem;
-        padding: 2rem;
-        width: 90%;
-    }
-    .mobile-menu > *{
-        border: none;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        align-items: center;
     }
     #profile-bruh{
         border: none;
