--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,7 @@
     --grey: #E4DCCF;
     --beige: #fff5e453;
     --grey-too: #0044ff05;
-    --purple: #bcb3dd91;
+    --purple: #f2f5fe;
     --green:  #F9F5EB;
     --black: #EA9E54;
 }
@@ -87,7 +87,6 @@ form{
 }
 #button{
     border: 1px solid var(--grey);
-    background-color: white;
     color: var(--red);
     font-size: 1rem;
     height: fit-content;
