--- a/frontend/src/components/Navigation/MobileMenu.css
+++ b/frontend/src/components/Navigation/MobileMenu.css
@@ -1,6 +1,7 @@
 .mobile-menu{
     display: none;
-    padding: 1.7rem 1rem 1.7rem 1rem;
+    /* padding: 1.7rem 1rem 1.7rem 1rem; */
+    padding: 0;
     font-size: .01rem;
 }
 #logo-mobile{
@@ -12,7 +13,7 @@
 }
 .nav-bar-conditional-content-mobile{
     margin: 0;
-    padding: 1.7rem 1rem 1.7rem 1rem;
+    /* padding: 1.7rem 1rem 1.7rem 1rem; */
     display: flex;
     flex-direction: column;
 }
