--- a/frontend/src/components/Navigation/MobileMenu.css
+++ b/frontend/src/components/Navigation/MobileMenu.css
@@ -11,7 +11,7 @@
     align-items: center;
     justify-content: center;
 }
-.nav-bar-conditional-content-mobile{
+.mobile{
     margin: 0;
     /* padding: 1.7rem 1rem 1.7rem 1rem; */
     display: flex;
